# bits.rs

./: Cargo.toml  README.md
doc/: search-index.js
doc/bits/: index.html  sidebar-items.js  stability.html  stability.json
doc/bits/generic/: index.html  sidebar-items.js  trait.BitOps.html
doc/bits/x86/: index.html  sidebar-items.js
doc/bits/x86/abm/: index.html
doc/bits/x86/abm/u64/: fn.lzcnt.html  fn.popcnt.html  index.html  sidebar-items.js
doc/bits/x86/bmi1/: index.html
doc/bits/x86/bmi1/u64/: fn.andn.html  fn.bextr.html  fn.blsi.html  fn.blsmsk.html  fn.blsr.html  fn.tzcnt.html  index.html  sidebar-items.js
doc/bits/x86/bmi2/: index.html
doc/bits/x86/bmi2/u64/: fn.bzhi.html  fn.pdep.html  fn.pext.html  index.html  sidebar-items.js
doc/bits/x86/tbm/: index.html  sidebar-items.js
doc/bits/x86/tbm/u64/: fn.blcfill.html  fn.blci.html  fn.blcic.html  fn.blcmsk.html  fn.blcs.html  fn.blsfill.html  fn.blsic.html  fn.t1mskc.html  fn.tzmsk.html  index.html  sidebar-items.js
doc/implementors/bits/generic/: trait.BitOps.js
doc/src/bits/: generic.rs.html  lib.rs.html  x86.rs.html
src/: generic.rs  lib.rs  x86.rs
